--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>y</title>
+    <title>西安安防监控_大屏显示_门禁系统_楼宇对讲-西安华数电子科技有限公司</title>
   </head>
   <body>
     <div id="app"></div>
